karl package Changelog
======================

After 3.53
----------

- Implemented " Distribution lists on organizational reports" blueprint;  see:
  https://blueprints.launchpad.net/karl3/+spec/distribution-list-organizational

- Merge from 'tseaver-distribution_lists' branch.

- Added fault tolerance in mailin for messages in unknown character encodings.
  (LP #698153)

3.53 (2010-12-20)
-----------------

- Fixed bug when uploading images to new content via image drawer where the
  image would wind up stranded in a temp folder and would not show up in
  'My Recent' or 'Community' in the image drawer. (LP #691141)

3.52 (2010-12-06)
-----------------

- Remove 40-character limit for names of items inside the people directory.

- On the community members table: moved hidden inputs into a table cell,
  so IE doesn't add extra random space (LP #684209).

- Add missing formish resources to a page that manually constructs its form
  (LP #683651).


3.51 (2010-11-30)
-----------------

- Enabled adding redirector objects to peopledir sections, in order to
  provide backward compatibility for old URLs.

- Fix mailin for communities which contain periods in the id. (LP #673152)

- Allow embedded objects in intranets feature HTML. (LP #677497)

- Don't allow unicode value of ``max_age`` to propagate into cookies emitted
  on successful login (LP #674123).

- Fixed dump of peopledir sections without any ``__acl__`` (LP #672744).


3.50 (2010-11-08)
-----------------

- Added basic logging configuration to console scripts. (LP #670610)

- Fixed bug which caused content feeds to break if an edited item was not
  contained by a community. (LP #670967)

- Add a peopledirectory report filter based on the 'is_staff' index.
  and configure it as an addable in a report.  (LP #669523)

- Make the jQuery UI dialog on Accept Invitation show an OK button
  that isn't misaligned.  We have some pretty horrible CSS styling